# coursework-upstream

./: .gitignore  pyproject.toml
discussion2/: README
discussion3/: README  clickdiscs.py
discussion4/: README  slidingpuzzle.py
discussion7/: README.txt  fakes.py  mini-tui.py
hw0/: validate-repo.py
hw1/: README.md  grader.py  pytest.ini  task1.py  task2.py  task3.py  task4.py  task5.py  test_hw1_extra.py  test_hw1_phase1.py  test_hw1_phase2.py
hw2/: mypy.ini  pytest.ini  quadtree.py  task1.py  task2.py  task3.py  test_hw2_extra.py  test_hw2_phase1.py  test_hw2_phase2.py
hw2/data/: example-1.txt  example-2.txt  example-3.txt
hw3/: pytest.ini  task1.py  task2.py  task3.py  task4.py  task5.py  test_hw3_extra.py  test_hw3_phase1.py  test_hw3_phase2.py  tree.py
hw4/: graph.py  mypy.ini  pytest.ini  smallwords  task1.py  task2.py  task3.py  task4.py  test_hw4_extra.py  test_hw4_phase1.py
hw5/: README.md  load_data.py  mypy.ini  pytest.ini  task1.py  task2.py  task3.py  test_hw5_extra.py  test_hw5_phase1.py
hw5/expected-phase1/: README
