[project]
name = "uv-testing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=23.12",
    "click>=8.1.7",
    "colorama>=0.4.6",
    "flake8>=6.1.0",
    "gitpython>=3.1.40",
    "ipython>=8.0.0",
    "mypy>=1.7.1",
    "pandas>=3.0.1",
    "pandas-stubs>=3.0.0.260204",
    "pygame>=2.5.2",
    "pylint>=3.0.3",
    "pytest>=7.4.3",
    "pytest-json-report>=1.5.0",
    "pytest-metadata>=3.0.0",
    "pytest-mypy>=0.10.3",
    "pytest-timeout>=2.2.0",
    "rich>=14.3.3",
    "types-colorama>=0.4.15.12",
]
